# TPAlgoritmos1-Ej10Practica4

./: README.md  configure.ac
data/: test_data.txt
src/: Makefile.am  main.c  main.h  sequence.c  sequence.h  stack.c  stack.h  tp_algo.8  tp_algo.c  tp_algo.h
